# autonomous_mobile_manipulation

./: README.md
boat_planner/: CMakeLists.txt  movement_test.py  package.xml
boat_planner/config/: points.yaml
boat_planner/include/boat_planner/: MGI_BoatPlanner.h
boat_planner/launch/: main.launch
boat_planner/src/: boat_planner_node.cpp  movement_test.py
boat_planner/src/boat_planner/: MGI_BoatPlanner.cpp
robowork_gazebo/launch/: bvr_SIM_playpen.launch
robowork_gazebo/worlds/: bvr_project.world
