<?xml version="1.0"?>
<package format="2">
  <name>boat_planner</name>
  <version>0.0.0</version>
  <description>Boat hull normals planner</description>
  <author email="stephen_carlson@nevada.unr.edu"> Steve Carlson</author>
  <maintainer email="sohaila@nevada.unr.edu">Sohail Ahmed</maintainer>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <!-- <build_depend>message_generation</build_depend> -->

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>roslaunch</exec_depend> -->


  <!-- MoveIt Dependencies
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  -->


  <!-- Reserve/Reference
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>joy</exec_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  -->

</package>